# smalltalkrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
badges/: data.json
scripts/: build_and_badge.sh  generate_badges.py
src/: main.rs
src/core/: boolean.rs  mod.rs  object.rs  small_integer.rs
